src/index.css
@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');

html {
  height: 100%;
  background-color: #ff6600;
  max-width: 100%;
  overflow-x: hidden;
  --current-background: #ff6600;
}

body {
  height: 100%;
  /* background-color: var(--current-background); */
  /*! replace first color in gradient with yellow??? */
  background: linear-gradient(300deg, #ff001a, #ff6600, #ffe500);
  background-size: 180% 180%;
  animation: gradient-animation 18s ease infinite;
  max-width: 100%;
  overflow-x: hidden;
}

@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

#root {
  /*? neon orange */
  /* background-color: #ff6600; */
  /*? neon green */
  /* background-color: #00ff66; */
  /*? neon indigo */
  /* background-color: #6600ff; */
  color: #000;
  transition: color .5s ease-in-out;
}

  #logo {
    width: 2.8125em;
    height: 2.8125em;
    position: relative;
    z-index: 1;
    transform: scale(1.5) translateX(.3125em) translateY(.5em);
    transition: all .25s ease-in-out;
  }

  .navbar {
    background-color: #ff583300!important;
    z-index: 2;
  }

  .navbar-brand {
    padding: 0!important;
  }

  .navbar-toggler {
    border: none;
    padding: 0!important;
    border-radius: none!important;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .arrow {
    background-image: url(/public/images/back-arrow.svg)!important;
    /* transition: background-image .35s linear; */
  }
  .navbar-toggler:hover {
    animation: button-pulse 1.5s linear 0s infinite backwards;
  }

  .navbar-toggler:focus {
    filter: drop-shadow(1px 0px 1px #0099ff) drop-shadow(-1px 0px 1px #0099ff) drop-shadow(0px 1px 1px #0099ff) drop-shadow(1px -1px 1px #0099ff) brightness(115%) contrast(200%)!important;
  }

  .btn-close:focus {
    box-shadow: none;
    filter: invert() drop-shadow(1px 0px 1px #0099ff) drop-shadow(-1px 0px 1px #0099ff) drop-shadow(0px 1px 1px #0099ff) drop-shadow(1px -1px 1px #0099ff) brightness(115%) contrast(200%)!important;
  }

  div#project-header.modal-header > button.btn-close:focus {
    filter: drop-shadow(1px 0px 1px #0099ff) drop-shadow(-1px 0px 1px #0099ff) drop-shadow(0px 1px 1px #0099ff) drop-shadow(1px -1px 1px #0099ff) brightness(115%) contrast(200%)!important;
  }

  .carousel-control-next-icon:focus, .carousel-control-prev-icon:focus {
    filter: drop-shadow(1px 0px 1px #0099ff) drop-shadow(-1px 0px 1px #0099ff) drop-shadow(0px 1px 1px #0099ff) drop-shadow(1px -1px 1px #0099ff) brightness(115%) contrast(200%)!important;
  }

  .btn-close:hover {
    animation: button-pulse 1s linear 0s infinite backwards;
  }

  @keyframes button-pulse {
    0% {
      transform: scale(1);
    }
    50% {
      transform: scale(1.15);
    }
    100% {
      transform: scale(1);
    }
  }

  .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
    font-size: 1.75em;
    pointer-events: none;
    /* transition: background-image .25s ease-in-out; */
  }

  .navbar-toggler:focus {
    -webkit-box-shadow: none!important;
    -moz-box-shadow: none!important;
    box-shadow: none!important;
  }

  #main-section {
    padding-top: 25%;
    text-align: right;
    height: 100%;
    /* padding-right: 55px; */
    padding-right: 17.5%;
    padding-bottom: 50%;
  }

  #main-container {
    position: relative;
    z-index: 0;
    perspective: 250px;
    transform-style: preserve-3d;
    padding: 0;
    /* padding-right: 55px; */
  }

  /* #dots {
    position: absolute;
    z-index: -5;
    top: -200px;
    right: 0px;
    left: 5px;
    transform: scale(1.15) rotateY(-5deg);
    filter: blur(1px) opacity(.15);
    animation: rotating-dots 60s ease-in-out 0s infinite both;
  }

  @keyframes rotating-dots {
    0% {
      transform: scale(1.15) rotateY(-5deg) rotateZ(0deg);
    }
    100% {
      transform: scale(1.15) rotateY(-5deg) rotateZ(360deg);
    }
  } */

  .main-h2 {
    font-family: 'Archivo Black', sans-serif;
    color: #fff;
    /* font-size: 20px; */
    font-size: 1.25em;
    /* margin-top: 50px; */
    margin-bottom: 0;
    letter-spacing: -3px;
    line-height: 1;
    text-shadow: 1px -1px 0 #ff001a44, 2px -2px 0 #ff001a44, 3px -3px 0 #ff001a44, 4px -4px 0 #ff001a44;
    /*! only need this below if the shadows from the buttons are overlapping  */
    position: relative;
    z-index: 1;
    /* transition: color .5s linear;
    transition: text-shadow .5s linear; */
    transition: all .5s linear;
  }

  /* #ff010018 */

  #uefn-h2 {
    margin-top: 10%;
    animation: h2-slide-and-pop .5s ease-out .8s 1 normal backwards;
  }

  .project-button-container {
    position: relative;
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 0;
    transform: rotateY(-15deg) scaleX(1.15) scaleY(1.35);
    margin-top: 23.5%;
  }

  .project-button-container:nth-child(2) {
    padding-bottom: 5%;
  }

  .project-button {
    text-decoration: none;
    color: #000;
    font-family: 'Archivo Black', sans-serif;
    font-size: 36px;
    line-height: 32px;
    letter-spacing: -4px;
    text-shadow: 1px -1px 0 #ff001a44, 2px -2px 0 #ff001a44, 3px -3px 0 #ff001a44, 4px -4px 0 #ff001a44;
    text-wrap: pretty;
    position: relative;
    z-index: 1;
    /* transition: color .5s linear;
    transition: text-shadow .5s linear; */
    transition: all .35s linear;
  }

  .main-h2:nth-child(1) {
    animation: slide-in-and-pop .5s ease-out 0s 1 normal backwards;
  }
  #uefn-h2 {
    animation: slide-in-and-pop .5s ease-out .9s 1 normal backwards;
  }
/* ... */

